# grapsus

./: .dockerignore  .gitignore  .mergify.yml  .rumdl.toml  Cargo.toml  Dockerfile  README.md  committed.toml  deny.toml  licenserc.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/compute-version/: action.yml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci-all.yml  ci-compliance.yml  ci-docker.yml  ci-rust.yml
crates/grapsus/: Cargo.toml
crates/grapsus/src/: core.rs  main.rs
crates/grapsus/src/core/: greeter.rs
crates/grapsus/tests/: integration.rs
crates/xtasks/: Cargo.toml
crates/xtasks/src/: artifacts.rs  main.rs  security.rs  sources.rs  tests.rs  utils.rs
