# Copyright 2026 Dotanuki Labs
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "grapsus"
description = "An opinionated way to kick-off CLI apps powered by Rust"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
clap = { workspace = true, features = ["derive"] }
human-panic.workspace = true
tikv-jemallocator.workspace = true
console.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true

